--- a/form.html
+++ b/form.html
@@ -15,7 +15,7 @@
         <label>female</label><br>
          <input type="radio" id="adi" name="html" value="adi">
         <label>other</label><br><br>
-        <!--cheakbox-->
+        <!--checkbox-->
         <label>select your education</label>
         <br>
         <label>class 10</label>
